# FreetimeProjects

./: .gitignore  Auto_Painter.py  README.md  test5.txt
Automatisering/: Auto_Painter.py  (+16 more)
Programutvikling/Maximus Cup Arranger/: .gitignore  CMakeLists.txt  README.md
Programutvikling/Maximus Cup Arranger/docs/ClassDiagrams/: classDiagram_v0.1.drawio
Programutvikling/Maximus Cup Arranger/docs/DomainModels/: domainModel_v1.0.drawio
Programutvikling/Maximus Cup Arranger/docs/Minutes and meetings/: 01.03.22 Minutes.md  05.04.22 Minutes.md  08.03.22 Minutes.md  15.03.22  Minutes.md  19.04.22 Minutes.md  22.03.22 Minutes.md  26.04.22.md  28.02.22 Minutes.md  29.03.22 Minutes.md  User test 1.md
Programutvikling/Maximus Cup Arranger/docs/SequenceDiagrams/: sequenceDiagram_Teams_Team_v0.1.txt  sequenceDiagram_Tournaments_Tournament_Matche_Match_v0.1.txt  sequenceDiagram_Users_User_v0.1.txt  sequenceDiagram_v0.1_source.txt
Programutvikling/Maximus Cup Arranger/docs/Universal Design/: Universal Design.docx  Universal Design.md
Programutvikling/Maximus Cup Arranger/docs/UsabilityTests/: usability-test-1.md  usability-test-2.md  usability-test-3.md
Programutvikling/Maximus Cup Arranger/include/: constants.h  helperFunctions.h  match.h  matches.h  team.h  teams.h  tournament.h  tournaments.h  user.h  users.h
Programutvikling/Maximus Cup Arranger/spike/rapidPrototype_progDev_v0/: main.cpp
Programutvikling/Maximus Cup Arranger/spike/teamArrangment/: contestarrangment.cpp
Programutvikling/Maximus Cup Arranger/src/: helperFunctions.cpp  main.cpp  match.cpp  matches.cpp  team.cpp  teams.cpp  tournament.cpp  tournaments.cpp  user.cpp  users.cpp
(+19 files in other folders)
